[gd_scene load_steps=14 format=2]

[ext_resource path="res://Maps/Util/Standart_Room/Standart_Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://Maps/Util/Mountain_Polygon/Mountain_Polygon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Map_Elements/One_Way_Platform/One_Way_Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Maps/Procedural_Maps/Mountain/Boss_Room/Boss_Room.gd" type="Script" id=4]
[ext_resource path="res://Classes/Exit.gd" type="Script" id=5]
[ext_resource path="res://Maps/Util/Room_Exit/RoomExit.tscn" type="PackedScene" id=6]

[sub_resource type="Resource" id=1]
script = ExtResource( 5 )
id = 0
direction = 2
position = Vector2( 0, 0 )

[sub_resource type="Resource" id=2]
script = ExtResource( 5 )
id = 1
direction = 0
position = Vector2( 0, 0 )

[sub_resource type="Resource" id=3]
script = ExtResource( 5 )
id = 2
direction = 3
position = Vector2( 0, 0 )

[sub_resource type="Resource" id=4]
script = ExtResource( 5 )
id = 3
direction = 1
position = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 56 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 56, 8 )

[sub_resource type="CircleShape2D" id=7]
radius = 56.0

[node name="Boss_Room" instance=ExtResource( 1 )]
script = ExtResource( 4 )
room_type = 6
exits = [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ]

[node name="BG" parent="Room" index="0" instance=ExtResource( 2 )]
color = Color( 0.172549, 0.133333, 0.129412, 1 )
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, 0, 600 )
type = 2

[node name="Ceiling_Right" parent="Room" index="1" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 768, 120, 840, 128, 904, 152, 928, 208, 936, 272, 976, 296, 1024, 296, 1024, 0, 576, 0, 584, 40, 616, 96, 624, 128, 656, 120 )
type = 4

[node name="Inner" parent="Room/Ceiling_Right" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 600, 40, 624, 80, 648, 104, 768, 104, 864, 96, 936, 128, 960, 184, 968, 256, 1000, 280, 1024, 280, 1024, 0, 592, 0 )
type = 3

[node name="Ceiling_Left" parent="Room" index="2" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 0, 304, 48, 304, 128, 248, 160, 176, 208, 128, 272, 112, 344, 112, 400, 128, 408, 96, 440, 48, 448, 0, 0, 0 )
type = 4

[node name="Inner" parent="Room/Ceiling_Left" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 0, 272, 56, 272, 112, 216, 136, 128, 200, 88, 288, 88, 352, 96, 392, 112, 408, 72, 432, 32, 440, 0, 0, 0 )
type = 3

[node name="Left_Floor" parent="Room" index="3" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 0, 448, 64, 448, 128, 456, 152, 472, 160, 504, 200, 520, 264, 520, 328, 528, 336, 536, 344, 560, 376, 560, 432, 568, 448, 576, 448, 600, 0, 600 )
type = 4

[node name="Inner" parent="Room/Left_Floor" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 0, 464, 64, 464, 112, 480, 136, 512, 168, 536, 248, 536, 304, 544, 320, 568, 392, 576, 432, 584, 440, 600, 0, 600 )
type = 3

[node name="Right_Floor" parent="Room" index="4" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 576, 600, 576, 576, 624, 568, 664, 552, 752, 536, 832, 536, 864, 520, 880, 464, 912, 448, 992, 440, 1024, 440, 1024, 600 )
type = 4

[node name="Inner" parent="Room/Right_Floor" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 600, 600, 608, 584, 680, 576, 768, 552, 848, 552, 880, 528, 896, 488, 928, 464, 992, 456, 1024, 456, 1024, 600 )
type = 3

[node name="Middle" parent="Room" index="5" instance=ExtResource( 2 )]
position = Vector2( 0, -32 )
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 384, 376, 376, 384, 384, 392 )
type = 4

[node name="Right" parent="Room/Middle" index="0" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 640, 392, 648, 384, 640, 376 )
type = 4

[node name="Hole" type="Polygon2D" parent="Room/Middle" index="1"]
color = Color( 0.121569, 0.0941176, 0.0901961, 1 )
polygon = PoolVector2Array( 512, 184, 488, 216, 464, 256, 448, 320, 424, 344, 400, 376, 624, 376, 600, 336, 576, 304, 560, 256, 544, 216 )

[node name="Inner" type="Polygon2D" parent="Room/Middle/Hole" index="0"]
color = Color( 0.09, 0.06972, 0.0666, 1 )
polygon = PoolVector2Array( 488, 232, 472, 272, 464, 328, 440, 344, 416, 376, 616, 376, 608, 368, 584, 336, 560, 312, 552, 272, 544, 232, 512, 200 )

[node name="Innerer" type="Polygon2D" parent="Room/Middle/Hole" index="1"]
color = Color( 0.04, 0.0309867, 0.0296, 1 )
polygon = PoolVector2Array( 488, 280, 480, 328, 464, 352, 456, 376, 576, 376, 568, 352, 544, 328, 536, 280, 520, 240, 512, 224, 504, 240 )

[node name="Sky" parent="Room/Middle/Hole" index="2" instance=ExtResource( 2 )]
color = Color( 0.509804, 0.635294, 0.686275, 1 )
polygon = PoolVector2Array( 488, 376, 496, 368, 504, 336, 504, 320, 512, 280, 512, 320, 520, 344, 528, 376 )
type = 0

[node name="Middle_Plat" parent="Room/Middle" index="2" instance=ExtResource( 3 )]
position = Vector2( 512, 384 )
scale = Vector2( 2, 1 )

[node name="Top_Plat" parent="Room" index="6" instance=ExtResource( 3 )]
position = Vector2( 512, 120 )
scale = Vector2( 1.75, 1 )

[node name="Bot_Plat" parent="Room" index="7" instance=ExtResource( 3 )]
position = Vector2( 512, 584 )

[node name="Left_Ceil" type="CollisionPolygon2D" parent="Room/Wall" index="0"]
polygon = PoolVector2Array( 0, 456, 0, 448, -48, 448, -48, 304, 48, 304, 128, 248, 160, 176, 208, 128, 272, 112, 344, 112, 400, 128, 408, 96, 440, 48, 448, 0, 0, 0, 0, 296, -56, 296, -56, 456 )

[node name="Right_Ceil" type="CollisionPolygon2D" parent="Room/Wall" index="1"]
polygon = PoolVector2Array( 1024, 296, 1024, 0, 584, 0, 584, -96, 440, -96, 440, 0, 448, 0, 448, -88, 576, -88, 576, 0, 584, 40, 616, 96, 624, 128, 656, 120, 768, 120, 840, 128, 904, 152, 928, 208, 936, 272, 976, 296 )

[node name="Left_Floor" type="CollisionPolygon2D" parent="Room/Wall" index="2"]
polygon = PoolVector2Array( 0, 448, 64, 448, 128, 456, 152, 472, 160, 504, 200, 520, 264, 520, 328, 528, 336, 536, 344, 560, 376, 560, 432, 568, 448, 576, 448, 696, 576, 696, 576, 600, 584, 600, 584, 704, 440, 704, 440, 600, 0, 600 )

[node name="Right_Floor" type="CollisionPolygon2D" parent="Room/Wall" index="3"]
polygon = PoolVector2Array( 576, 600, 576, 576, 624, 568, 664, 552, 752, 536, 832, 536, 864, 520, 880, 464, 912, 448, 992, 440, 1064, 440, 1064, 296, 1024, 296, 1024, 288, 1072, 288, 1072, 448, 1024, 448, 1024, 600 )

[node name="0" type="StaticBody2D" parent="Blocks" index="0"]

[node name="Soft" parent="Blocks/0" index="0" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 160, 144, 128, 248, 120, 312, 128, 416, 152, 472, 160, 504, 88, 504, 96, 144 )
type = 4

[node name="Inner" parent="Blocks/0/Soft" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 152, 96, 112, 192, 104, 288, 104, 384, 120, 472, 136, 512, 0, 512, 0, 96 )
type = 3

[node name="col" type="CollisionPolygon2D" parent="Blocks/0" index="1"]
polygon = PoolVector2Array( 160, 144, 128, 248, 120, 312, 128, 416, 152, 472, 160, 504, 104, 504, 112, 144 )

[node name="1" type="StaticBody2D" parent="Blocks" index="1"]

[node name="Soft" parent="Blocks/1" index="0" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 400, 128, 464, 128, 512, 144, 568, 128, 624, 128, 656, 120, 656, 80, 400, 80 )
type = 4

[node name="Inner" parent="Blocks/1/Soft" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 392, 112, 456, 120, 512, 128, 568, 112, 632, 104, 656, 104, 656, 0, 392, 0 )
type = 3

[node name="col" type="CollisionPolygon2D" parent="Blocks/1" index="1"]
polygon = PoolVector2Array( 400, 128, 464, 128, 512, 144, 568, 128, 624, 128, 656, 120, 656, 104, 400, 104 )

[node name="2" type="StaticBody2D" parent="Blocks" index="2"]

[node name="Soft" parent="Blocks/2" index="0" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 912, 176, 936, 272, 944, 344, 928, 400, 880, 440, 880, 464, 960, 456, 960, 176 )
type = 4

[node name="Inner" parent="Blocks/2/Soft" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 944, 160, 960, 248, 960, 336, 944, 408, 904, 440, 896, 488, 1024, 488, 1024, 152 )
type = 3

[node name="col" type="CollisionPolygon2D" parent="Blocks/2" index="1"]
polygon = PoolVector2Array( 912, 176, 936, 272, 944, 344, 928, 400, 880, 440, 880, 464, 960, 464, 960, 176 )

[node name="3" type="StaticBody2D" parent="Blocks" index="3"]

[node name="Soft" parent="Blocks/3" index="0" instance=ExtResource( 2 )]
color = Color( 0.364706, 0.321569, 0.305882, 1 )
polygon = PoolVector2Array( 328, 528, 448, 536, 576, 544, 624, 544, 752, 536, 752, 560, 328, 560 )
type = 4

[node name="Inner" parent="Blocks/3/Soft" index="0" instance=ExtResource( 2 )]
color = Color( 0.266667, 0.227451, 0.219608, 1 )
polygon = PoolVector2Array( 304, 544, 408, 552, 528, 560, 656, 560, 768, 552, 768, 600, 304, 600 )
type = 3

[node name="col" type="CollisionPolygon2D" parent="Blocks/3" index="1"]
polygon = PoolVector2Array( 328, 528, 576, 544, 624, 544, 752, 536, 752, 560, 328, 552 )

[node name="0" parent="Exits" index="0" instance=ExtResource( 6 )]
position = Vector2( -40, 376 )

[node name="area" type="CollisionShape2D" parent="Exits/0" index="0"]
shape = SubResource( 5 )

[node name="1" parent="Exits" index="1" instance=ExtResource( 6 )]
position = Vector2( 512, -56 )
exit_id = 1

[node name="area" type="CollisionShape2D" parent="Exits/1" index="0"]
shape = SubResource( 6 )

[node name="2" parent="Exits" index="2" instance=ExtResource( 6 )]
position = Vector2( 1056, 368 )
exit_id = 2

[node name="area" type="CollisionShape2D" parent="Exits/2" index="0"]
shape = SubResource( 5 )

[node name="3" parent="Exits" index="3" instance=ExtResource( 6 )]
position = Vector2( 512, 640 )
exit_id = 3

[node name="area" type="CollisionShape2D" parent="Exits/3" index="0"]
shape = SubResource( 6 )

[node name="0" type="Position2D" parent="Entrances" index="0"]
position = Vector2( 16, 392 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="1" type="Position2D" parent="Entrances" index="1"]
position = Vector2( 512, 56 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="2" type="Position2D" parent="Entrances" index="2"]
position = Vector2( 1008, 384 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="3" type="Position2D" parent="Entrances" index="3"]
position = Vector2( 512, 520 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Boss_Door" type="Area2D" parent="Objects" index="0"]
position = Vector2( 512, 288 )
monitorable = false
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Objects/Boss_Door" index="0"]
shape = SubResource( 7 )

[node name="Arrow" type="Polygon2D" parent="Objects" index="1"]
modulate = Color( 1, 1, 1, 0 )
color = Color( 0.996078, 0.054902, 0.00784314, 1 )
polygon = PoolVector2Array( 504, 224, 504, 184, 488, 184, 512, 160, 536, 184, 520, 184, 520, 224 )

[node name="Tween" type="Tween" parent="Objects" index="2"]

[node name="Middle" type="Position2D" parent="." index="6"]
position = Vector2( 512, 300 )
__meta__ = {
"_gizmo_extents_": 512.0
}
[connection signal="exit_entered" from="Exits/0" to="." method="_on_exit_entered"]
[connection signal="exit_entered" from="Exits/1" to="." method="_on_exit_entered"]
[connection signal="exit_entered" from="Exits/2" to="." method="_on_exit_entered"]
[connection signal="exit_entered" from="Exits/3" to="." method="_on_exit_entered"]
[connection signal="body_entered" from="Objects/Boss_Door" to="." method="_on_Boss_Door_entered"]
[connection signal="body_exited" from="Objects/Boss_Door" to="." method="_on_Boss_Door_exited"]
